2003-11-02  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c (render_xc, render_ac): render inactive cursor as
	an outlined rectangle. fixes #126034.
	(gtk_hex_key_press): toggle active view on tab, not just on control
	tab. fixes #126033.
	(gtk_hex_size_allocate): queue offset widget for redraw .

2003-09-10  Jaka Mocnik  <jaka@gnu.org>

	* src/Makefile.am: removed redundant -DGHEX_UI_DIR and
	-DGHEX_GLADEDIR CFLAGS!
	* configure.in: bumped version to 2.4.0.1; tag GHEX_2_4_0_1;
	fixes problems with installation of locale files.

2003-09-01  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c: applied a patch from Kaushal Kumar: Check on
	close if the current file was deleted, and prompt for a save to
	avoid a possible data loss. fixes #119855.
	(ghex_window_save_as): put warning dialog on top. fixes #119707.
	patch by Shakti Sen.

2003-08-18  Stanislav Brabec  <sbrabec@suse.cz>

	* Makefile.am: Added xmldocs.make to EXTRA_DIST (needed for
	autoreconf).

2003-08-12  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c: applied patch by Shakti Sen to prevent NULL
	filenames.
	* src/main.c: dont crash if a document fails to open because of
	lack of memory.

2003-05-14  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-05-28  Danilo Segan <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
	
2003-05-24  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: don't retain the previous file name when opening a new
	one. patch by Muktha Narayan.
	
2003-05-15  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: pass proper arg to va_end. patch by Miguel Ibarra.

2003-04-30  Irene Ryan <irene.ryan@sun.com>

	* help/C/ghex2.xml: Fixed one technical inaccuracy and included 
     a description of the Revert menu item
	* help/C/ghex2-C.omf: Updated the manual release details
	* help/C/*.png: Removed obsolete graphic files
	* help/C/ghex.xml: Removed obsolete file
	* help/C/*.sgml: Removed obsolete SGML files
