@@ -1,3 +1,9 @@
+2003-12-29  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/ui.c (close_cb): backported a crasher fix from 2.5 by Shakti
+	Sen.
+	* configure.in: version 2.4.1; tagged as GHEX_2_4_1; tarball released.
+
 2003-11-02  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/gtkhex.c (render_xc, render_ac): render inactive cursor as
